--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^2.0.7
   firebase_auth: ^5.6.0
   dio: ^5.8.0+1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
