--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.6.0
   dio: ^5.8.0+1
   font_awesome_flutter: ^10.8.0
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
