--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   url_launcher: ^6.3.1
   intl: ^0.20.2
   lottie: ^3.3.1
+  uni_links: ^0.5.1
+
+
+
 
 dev_dependencies:
   flutter_test:
