--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   url_launcher: ^6.3.1
   intl: ^0.20.2
   lottie: ^3.3.1
-
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
