--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   intl: ^0.20.2
   lottie: ^3.3.1
   webview_flutter: ^4.2.2
+  firebase_messaging: ^15.2.9
+  flutter_local_notifications: ^19.3.0
 
 dev_dependencies:
   flutter_test:
