--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   webview_flutter: ^4.2.2
   firebase_messaging: ^15.2.9
   flutter_local_notifications: ^19.3.0
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
