--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_messaging: ^15.2.9
   flutter_local_notifications: ^19.3.0
   flutter_html: ^3.0.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
